--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,10 +4,11 @@
 @import "compass";
 @import "../bower_components/meyer-reset/stylesheets/meyer-reset";
 
-$header-font-size:      24px;
-$header-sub-font-size:  16px;
-$tabs-font-size:        11px;
-$copy-font-size:        14px;
+@import "modal-variables";
+@import "modal-select";
+@import "modal-checkbox";
+
+
 
 
 
@@ -49,6 +50,8 @@ body {
     &__sub-header {
         font-size: $header-sub-font-size; 
         color: #5E6E7D;
+        border-bottom: 1px solid #D5DDE1;
+        @include box-shadow(0 1px 0 rgba(0, 0, 0, 0.1));
     }
     &__steps {
         margin: 0;
@@ -85,8 +88,7 @@ body {
 
 
 
-.hidden {
-    //visibility: hidden;
+.hidden {    
     position: absolute;
     left: -99999px;
 }
@@ -136,81 +138,7 @@ input[type=radio] + label.type {
 
 
 
-.switch {
-  position: relative;
-  height: 26px;
-  width: 120px;
-  margin: 20px auto;
-  background: #6CB23D;
-  border-radius: 3px;
-  -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
-  &--off {
-    @extend .switch;
-        background: #B2C0CC;
-    }
-}
 
-.switch-label {
-  position: relative;
-  z-index: 2;
-  float: left;
-  width: 58px;
-  line-height: 26px;
-  font-size: 11px;
-  color: rgba(255, 255, 255, 0.35);
-  text-align: center;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.45);
-  cursor: pointer;
-  &.switch-label-on {
-
-  }
-}
-.switch-label:active {
-  font-weight: bold;
-}
-.switch-label-off {
-  padding-left: 2px;
-}
-.switch-label-on {
-  padding-right: 2px;
-}
-.switch-input {
-  display: none;
-}
-.switch-input:checked + .switch-label {
-  font-weight: bold;
-  color: rgba(0, 0, 0, 0.65);
-  text-shadow: 0 1px rgba(255, 255, 255, 0.25);
-  @include transition(0.15s ease-out);
-  @include transition-property(color, text-shadow);
-}
-.switch-input:checked + .switch-label-on ~ .switch-selection {
-  left: 60px;
-  background-color: #FFFFFF;
-  /* Note: left: 50%; doesn't transition in WebKit */
-}
-
-.switch-selection {
-  position: absolute;
-  z-index: 1;
-  top: 2px;
-  left: 2px;
-  display: block;
-  width: 58px;
-  height: 22px;
-  border-radius: 3px;
-  background-color: #DCF5BD;
-  // background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #9dd993), color-stop(100%, #65bd63));
-  // background-image: -webkit-linear-gradient(top, #9dd993, #65bd63);
-  // background-image: -moz-linear-gradient(top, #9dd993, #65bd63);
-  // background-image: -ms-linear-gradient(top, #9dd993, #65bd63);
-  // background-image: -o-linear-gradient(top, #9dd993, #65bd63);
-  // background-image: linear-gradient(top, #9dd993, #65bd63);
-  -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), 0 0 2px rgba(0, 0, 0, 0.2);
-  box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), 0 0 2px rgba(0, 0, 0, 0.2);
-  @include transition(left 0.15s ease-out);
-}
 
 
 
