--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,6 +3,7 @@
 
 @import "compass";
 @import "../bower_components/meyer-reset/stylesheets/meyer-reset";
+@import "../bower_components/jquery.selectBoxIt/src/stylesheets/jquery.selectBoxIt";
 
 @import "modal-variables";
 @import "modal-select";
