--- a/app/styles/_modal-select.scss
+++ b/app/styles/_modal-select.scss
@@ -1,79 +1,136 @@
-// .form-select {
-//     @include user-select(none);
-//     background: #ffffff;
-//     overflow: hidden;
-//     border: 1px solid #D5DDE1;
-//     border-radius: 3px;
-//     position: relative;
-//     width: 300px;
-//     @include single-transition(box-shadow, 0.2s);
-//     &:focus,
-//     &:hover {
-//         box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-//         background: #6CB33E;
-//     }
+.wrapper-dropdown-3 {
+    /* Size and position */
+    position: relative;
+    width: 200px;
+    margin: 0 auto;
+    padding: 10px;
 
-//     &:after {
-//         content: '▾';
-//         position: absolute;
-//         top: -4px;
-//         right: 12px;
-//         z-index: 1;
-//         color: #bbbbbb;
-//         line-height: 40px;
-//         font-size: 14px;
-//         .ie & {
-//             display: none;
-//         }
-//     }
-// }
+    /* Styles */
+    background: #fff;
+    border-radius: 7px;
+    border: 1px solid rgba(0,0,0,0.15);
+    box-shadow: 0 1px 1px rgba(50,50,50,0.1);
+    cursor: pointer;
+    outline: none;
 
-// select {
-//     position: relative;
-//     background: transparent;
-//     background-image: none;
-//     display: block;
-//     width: 100%;
-//     outline: none;
-//     color: #888888;
-//     cursor: pointer;
-//     z-index: 2;
-//     border: none;
-//     padding: 10px 10px 10px 5px;
-//     // This is so hacky.. (for Firefox)
-//     // Removes the default select arrow.
-//     text-overflow: '';
-//     text-indent: 5px;
-//     // End of brutal hack
+    /* Font settings */
+    font-weight: bold;
+    color: #8AA8BD;
+}
 
-//     @include appearance(none);
+.wrapper-dropdown-3:after {
+    content: "";
+    width: 0;
+    height: 0;
+    position: absolute;
+    right: 15px;
+    top: 50%;
+    margin-top: -3px;
+    border-width: 6px 6px 0 6px;
+    border-style: solid;
+    border-color: #8aa8bd transparent;
+}
 
-//     &[multiple=multiple] {
-//         height: auto;
-//         border: 1px solid #cbcbcb;
-//         border-radius: 3px;
-//         box-shadow: 0 0 1px rgba(0, 0, 0, 0.1), inset 0 0 10px rgba(0, 0, 0, 0.07);
+.wrapper-dropdown-3 .dropdown {
+  /* Size & position */
+    position: absolute;
+    top: 140%;
+    left: 0;
+    right: 0;
 
-//         @include single-transition(box-shadow, 0.2s);
+    /* Styles */
+    background: white;
+    border-radius: inherit;
+    border: 1px solid rgba(0,0,0,0.17);
+    box-shadow: 0 0 5px rgba(0,0,0,0.1);
+    font-weight: normal;
+    -webkit-transition: all 0.5s ease-in;
+    -moz-transition: all 0.5s ease-in;
+    -ms-transition: all 0.5s ease-in;
+    -o-transition: all 0.5s ease-in;
+    transition: all 0.5s ease-in;
+    list-style: none;
 
-//         &:hover {
-//             border-color: #cccccc;
-//             box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-//         }
-//     }
+    /* Hiding */
+    opacity: 0;
+    pointer-events: none;
+}
 
-//     option[disabled] {
-//         color: #eeeeee;
-//         text-shadow: none;
-//         border: none;
-//     }
-// }
+.wrapper-dropdown-3 .dropdown:after {
+    content: "";
+    width: 0;
+    height: 0;
+    position: absolute;
+    bottom: 100%;
+    right: 15px;
+    border-width: 0 6px 6px 6px;
+    border-style: solid;
+    border-color: #fff transparent;    
+}
 
-// select:-moz-focusring {
-//     color: transparent;
-//     text-shadow: 0 0 0 #888888;
-// }
+.wrapper-dropdown-3 .dropdown:before {
+    content: "";
+    width: 0;
+    height: 0;
+    position: absolute;
+    bottom: 100%;
+    right: 13px;
+    border-width: 0 8px 8px 8px;
+    border-style: solid;
+    border-color: rgba(0,0,0,0.1) transparent;    
+}
 
-// select::-ms-expand {
-//     display: none;
-// }
+.wrapper-dropdown-3 .dropdown li a {
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    color: #8aa8bd;
+    border-bottom: 1px solid #e6e8ea;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,1);
+    -webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -ms-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
+}
+
+.wrapper-dropdown-3 .dropdown li i {
+    float: right;
+    color: inherit;
+}
+
+.wrapper-dropdown-3 .dropdown li:first-of-type a {
+    border-radius: 7px 7px 0 0;
+}
+
+.wrapper-dropdown-3 .dropdown li:last-of-type a {
+    border: none;
+    border-radius: 0 0 7px 7px;
+}
+
+/* Hover state */
+
+.wrapper-dropdown-3 .dropdown li:hover a {
+    background: #f3f8f8;
+}
+
+/* Active state */
+
+.wrapper-dropdown-3.active .dropdown {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+/* No CSS3 support */
+
+.no-opacity       .wrapper-dropdown-3 .dropdown,
+.no-pointerevents .wrapper-dropdown-3 .dropdown {
+    display: none;
+    opacity: 1; /* If opacity support but no pointer-events support */
+    pointer-events: auto; /* If pointer-events support but no pointer-events support */
+}
+
+.no-opacity       .wrapper-dropdown-3.active .dropdown,
+.no-pointerevents .wrapper-dropdown-3.active .dropdown {
+    display: block;
+}
