--- a/app/styles/_modal-variables.scss
+++ b/app/styles/_modal-variables.scss
@@ -2,3 +2,12 @@ $header-font-size:      24px;
 $header-sub-font-size:  16px;
 $tabs-font-size:        11px;
 $copy-font-size:        14px;
+
+
+$copy-color-light: 		#5E6E7D;
+$copy-color-dark: 		#434B57;
+$border-color: 			#D5DDE1;
+
+$disabled-state:  		#91A0AA;
+$active-state: 			#6db33f;
+$available-state: 		#3a87c5;
