--- a/app/styles/_modal-checkbox.scss
+++ b/app/styles/_modal-checkbox.scss
@@ -1,74 +1,70 @@
+$switch-width: 80px;
+
 .switch {
-  position: relative;
-  height: 25px;
-  width: 120px;
-  background: #6CB23D;
-  border-radius: 3px;
-  -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
-  &--off {
-    @extend .switch;
-        background: #B2C0CC;
+    position: relative;
+    left: 3px;
+    height: $select-box-height;
+    width: $switch-width;
+    background: #6CB23D;
+    @include border-radius(10px);
+    @include box-shadow(inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1));
+    &.switch-off {
+            background: #B2C0CC;
+        }   
+    }
+
+.switch-label {
+    position: relative;
+    z-index: 2;
+    float: left;
+    width: ($switch-width / 2) - 2px;
+    line-height: $select-box-height;
+    font-size: 11px;
+    text-align: center;
+    text-transform: uppercase;
+    color: rgba(255, 255, 255, 0.35);
+    @include text-shadow(0 1px 1px rgba(0, 0, 0, 0.1));
+    cursor: pointer;
+    &:active {
+        font-weight: bold;    
     }
 }
 
-.switch-label {
-  position: relative;
-  z-index: 2;
-  float: left;
-  width: 58px;
-  line-height: 25px;
-  font-size: 11px;
-  color: rgba(255, 255, 255, 0.35);
-  text-align: center;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.45);
-  cursor: pointer;
-  &.switch-label-on {
-
-  }
-}
-.switch-label:active {
-  font-weight: bold;
-}
 .switch-label-off {
-  padding-left: 2px;
+    padding-left: 2px;
 }
 .switch-label-on {
-  padding-right: 2px;
+    text-indent: 4px;
 }
 .switch-input {
-  display: none;
+    display: none;
 }
 .switch-input:checked + .switch-label {
-  font-weight: bold;
-  color: rgba(0, 0, 0, 0.65);
-  text-shadow: 0 1px rgba(255, 255, 255, 0.25);
-  @include transition(0.15s ease-out);
-  @include transition-property(color, text-shadow);
+    font-weight: bold;
+    color: rgba(0, 0, 0, 0.65);
+    @include text-shadow(0 1px rgba(255, 255, 255, 0.25));
+    @include transition(0.15s ease-out);
+    @include transition-property(color, text-shadow);
+    &.switch-label-off {
+        color: #71B746;
+        @include text-shadow(1px 1px 0px rgba(255, 255, 255, 0.4));
+    }
 }
 .switch-input:checked + .switch-label-on ~ .switch-selection {
-  left: 60px;
+  left: $switch-width / 2;
   background-color: #FFFFFF;
-  /* Note: left: 50%; doesn't transition in WebKit */
 }
 
 .switch-selection {
-  position: absolute;
-  z-index: 1;
-  top: 2px;
-  left: 2px;
-  display: block;
-  width: 58px;
-  height: 22px;
-  border-radius: 3px;
-  background-color: #DCF5BD;
-  // background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #9dd993), color-stop(100%, #65bd63));
-  // background-image: -webkit-linear-gradient(top, #9dd993, #65bd63);
-  // background-image: -moz-linear-gradient(top, #9dd993, #65bd63);
-  // background-image: -ms-linear-gradient(top, #9dd993, #65bd63);
-  // background-image: -o-linear-gradient(top, #9dd993, #65bd63);
-  // background-image: linear-gradient(top, #9dd993, #65bd63);
-  -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), 0 0 2px rgba(0, 0, 0, 0.2);
-  box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), 0 0 2px rgba(0, 0, 0, 0.2);
-  @include transition(left 0.15s ease-out);
+    position: absolute;
+    z-index: 1;
+    top: 2px;
+    left: 2px;
+    display: block;
+    width: ($switch-width / 2) - 2px;
+    height: 22px;
+    background-color: #DCF5BD;
+    @include border-radius(8px);
+    @include box-shadow(inset 0 1px rgba(255, 255, 255, 0.5), 1px 2px 1px rgba(0, 0, 0, 0.3));
+    @include transition(left 0.15s ease-out);
 }
