--- a/app/styles/_modal-variables.scss
+++ b/app/styles/_modal-variables.scss
@@ -13,3 +13,7 @@ $active-state: 			#6db33f;
 $available-state: 		#3a87c5;
 
 
+$select-box-height: 	26px;
+
+$button-box-shadow: 	inset 0 3px 5px rgba(0, 0, 0, 0.1);
+$button-text-shadow:  	0 1px 1px rgba(0, 0, 0, 0.2);
